force-app/main/default/objects/aq_obj__c/aq_obj__c.object-meta.xml
<CustomObject>
    <description>jakies moje obiekty testowe</description>
    <label>aq obje</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>aq custom obj</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aq objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>