force-app/main/default/objects/aq_obj__c/fields/chlop__c.field-meta.xml
<CustomField>
    <fullName>chlop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>czy jestes chlopem z jajami???</description>
    <inlineHelpText>czy jestes chlopem z jajami???</inlineHelpText>
    <label>chlop</label>
    <type>Checkbox</type>
</CustomField>