force-app/main/default/objects/aq_obj__c/fields/chlop_od__c.field-meta.xml
<CustomField>
    <fullName>chlop_od__c</fullName>
    <description>od kiedy jestes chlop z jajami?</description>
    <inlineHelpText>od kiedy jestes chlop z jajami?</inlineHelpText>
    <label>chlop_od</label>
    <type>Date</type>
</CustomField>