force-app/main/default/objects/aq_obj__c/fields/ile_jaj__c.field-meta.xml
<CustomField>
    <fullName>ile_jaj__c</fullName>
    <description>ile masz jaj</description>
    <inlineHelpText>ile masz jaj?</inlineHelpText>
    <label>ile_jaj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>