force-app/main/default/objects/aq_obj__c/fields/lokalizacja__c.field-meta.xml
<CustomField>
    <fullName>lokalizacja__c</fullName>
    <description>lokalizacja</description>
    <inlineHelpText>gdzie jestes GPS</inlineHelpText>
    <label>lokalizacja</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>