force-app/main/default/objects/aq_obj__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>chlop__c</columns>
    <columns>chlop_od__c</columns>
    <columns>ile_jaj__c</columns>
    <columns>lokalizacja__Latitude__s</columns>
    <columns>lokalizacja__Longitude__s</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>